home-prod/argocd/secure-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway-secure
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "argocd.thingsgreener.com"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-vs-secure
  namespace: argocd
spec:
  hosts:
  - "argocd.thingsgreener.com"
  gateways:
  - argocd-gateway-secure
  http:
  - route:
    - destination:
        host: argocd-server
        port:
          number: 443
